# triangles

./: .gitignore  CMakeLists.txt  main.cpp
